[package]
name = "voker-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

voker-ptr = { path = "../voker-ptr", default-features = false }
voker-reg = { path = "../voker-reg", default-features = false }

voker-os = { path = "../voker-os", default-features = false }
voker-utils = { path = "../voker-utils", default-features = false }


serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
tracing = { version = "0.1", default-features = false, features = ["log"] }

[lints]
workspace = true
