[package]
name = "voker-dylib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
voker-internal = { path = "../voker-internal", default-features = false }

[lints]
workspace = true
