[package]
name = "voker-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]

default = [ "std", "debug", "backtrace" ]

std = []

debug = []

backtrace = ["std"]

dylib = []

[lints]
workspace = true

[dependencies]

voker-utils = { path = "../voker-utils", default-features = false }
