[package]
name = "voker-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]

default = [ "std" ]

std = []

dylib = []

[dependencies]

voker-ptr = { path = "../voker-ptr", default-features = false }
voker-reg = { path = "../voker-reg", default-features = false }

voker-utils = { path = "../voker-utils", default-features = false }

[lints]
workspace = true
